# PolyStats

./: .env.template  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: docker-compose.test.yml  docker-compose.yml  pyproject.toml
backend/ app/: main.py
backend/ app/core/: config.py
backend/ app/core/models/: db_helper.py
backend/app/: .env.template  main.py
backend/app/actions/: create_superuser.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 5b24ba3e8236_changed_tablenames.py  65b0d3104bc8_activities_and_subjects_tables.py  a3c575d9ecbf_change_tablenames.py  c67ee59ad8a1_user_table.py  d0e0586db60c_user_table.py  f36a27e99c8d_deleted_id_from_base.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: __init__.py  auth.py  subjects.py  users.py
backend/app/api/dependecies/authentication/: backend.py  user_manager.py  users.py
backend/app/api/dependencies/authentication/: access_tokens.py  strategy.py  user_manager.py
backend/app/core/: config.py
backend/app/core/authentication/: fastapi_users.py  transport.py  user_manager.py
backend/app/core/gunicorn/: app_options.py  application.py  logger.py
backend/app/core/models/: __init__.py  access_token.py  activity.py  base.py  db_helper.py  subject.py  user.py
backend/app/core/schemas/: activity.py  subject.py  syncGroup.py  user.py
backend/app/services/: unversity.py
backend/app/tests/: conftest.py  subjects.py  test_subjects.py  test_utils.py
backend/docker-build/app/: Dockerfile  Dockerfile.test
backend/tests/: conftest.py  test_student.py  test_student_progress_tracking_scenario.py  test_subjects.py  test_subjects_advanced.py  test_subjects_units.py  test_subjects_utils.py
frontend/: index.html
nginx/: default.conf
