[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
asyncpg = "^0.31.0"
alembic = "^1.17.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^15.0.3"}
httpx = "^0.28.1"
pytest = "^9.0.2"


[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)"
]
