[tool.poetry]
name = "polystats-backend"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.124.4"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
asyncpg = "^0.31.0"
alembic = "^1.17.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^15.0.3"}
httpx = "^0.25.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
# Поскольку в контейнере тесты лежат в /app/tests, а рабочая директория /app:
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnhandledCoroutineWarning"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "aiosqlite (>=0.22.1,<0.23.0)"
]
